fix(explorers): make wide path hoverable
This commit fixes a bug where the wide path was not hoverable because
it was using `visibility: hidden`. This has been changed to
`stroke-opacity: 0`, which makes the path invisible but still allows it
to receive mouse events.

--- a/apps/explorers/map-display.css
+++ b/apps/explorers/map-display.css
@@ -118,7 +118,7 @@ path.spiny-rat-hilite {
 }
 
 path.spiny-rat-wide {
-    visibility: hidden;
+    stroke-opacity: 0;
     pointer-events: all;
     stroke: #08f;
     stroke-width: 10px;
